@@ -46,7 +46,7 @@
     <dependency org="log4j" name="log4j" rev="1.2.16" transitive="false" conf="default"/>
     <dependency org="jline" name="jline" rev="0.9.94" transitive="false" conf="default"/>
 
-    <dependency org="org.jboss.netty" name="netty" conf="default" rev="3.2.2.Final">
+    <dependency org="io.netty" name="netty" conf="default" rev="3.7.0.Final">
       <artifact name="netty" type="jar" conf="default"/>
     </dependency>
 
